# trove_server

./: .gitignore  Cargo.toml  Procfile  README.md  rust-toolchain
examples/: git.yml
migrations/2022-11-09-213156_add_user/: up.sql
migrations/2022-11-10-210424_add_api_token/: up.sql
migrations/2022-11-14-205645_add_trove/: down.sql  up.sql
migrations/2022-11-15-183620_add_user_payment/: down.sql  up.sql
src/: auth.rs  errors.rs  file.rs  handlers.rs  main.rs  models.rs  schema.rs  utils.rs  vars.rs
